fix html and add family font in css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="project">
           <h2>Project</h2>
             <link  href="https://github.com/ryannewcomer/transportation-java"> a java program for calcuating transport
-        <<link href="https://github.com/ryannewcomer/java-score"> a score program made in java
+        <link href="https://github.com/ryannewcomer/java-score"> a score program made in java
         </section>
       </div>
   </body>
