--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <h1>Welcome to my page!</h1> 
 
       <div>
-        <select class="about">
+        <section class="about">
           <h2>About me</h2>
             <p>I am a student in Edinburgh, stuying computing scinece.</p> 
             <p>In the furture, I want to be a software enginer</p>
