add new image and talk more on 'about me'

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
           <h2>About me</h2>
             <p>I am a student in Edinburgh, stuying computing scinece.</p> 
             <p>In the furture, I want to be a software enginer</p>
-        </select>   
+           <h3>Hobbit</h3>
+              <p>I love car, gaming and social media</p>
+              <p>my favour car is porsche 911</p>
+              <p>I don't really have a favour game tbh </p>
+              <a href="images/prosche911GT3.jpg"></a>
+              <p>I usually play 'Riders Repulic', 'rdr2'</p>
+      </section>   
       </div>
 
       <div>
