try fixing image path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <p>I love car, gaming and social media</p>
               <p>my favour car is porsche 911</p>
               <p>I don't really have a favour game tbh </p>
-              <a href="images/prosche911GT3.jpg"></a>
+              <a href="images/porsche911GT3.jpg"></a>
               <p>I usually play 'Riders Repulic', 'rdr2'</p>
       </section>   
       </div>
