rework on project

--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
       <div>
         <section class="project">
           <h2>Project</h2>
-            <link  href="https://github.com/ryannewcomer/transportation-java"> a java program for calcuating transport
-        <link href="https://github.com/ryannewcomer/java-score"> a score program made in java
+            <a href="https://github.com/ryannewcomer/currenies">
+                <button>currenies</button>
+                <p>this is a website about currenies around the world</p>
+            </a>
+            <a href="https://github.com/ryannewcomer/java-score">
+                <button>
+                    score system
+                </button>
+                <p>this is a very simple scoreing system make in java</p>
+            </a>
         </section>
       </div>
   </body>
