--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ryan's Profilo</title>
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
       <h1>Welcome to my page!</h1> 
@@ -18,7 +18,7 @@
               <p>I love car, gaming and social media</p>
               <p>my favour car is porsche 911</p>
               <p>I don't really have a favour game tbh </p>
-              <a href="images\porsche911GT3.jpg"></a>
+              <a href="images/porsche911GT3.jpg"></a>
               <p>I usually play 'Riders Repulic', 'rdr2'</p>
       </section>   
       </div>
