--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
            <h3>Hobbit</h3>
               <p>I love car, gaming and social media</p>
               <p>my favour car is porsche 911</p>
+            <img src="images/porsche911GT3.jpg"></img>
               <p>I don't really have a favour game tbh </p>
-              <a href="images/porsche911GT3.jpg"></a>
               <p>I usually play 'Riders Repulic', 'rdr2'</p>
       </section>   
       </div>
