--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <h3>Hobbit</h3>
               <p>I love car, gaming and social media</p>
               <p>my favour car is porsche 911</p>
-            <img src="images/porsche911GT3.jpg"></img>
+            <img src="images/porsche911GT3.jpg" alt="prosche">
               <p>I don't really have a favour game tbh </p>
               <p>I usually play 'Riders Repulic', 'rdr2'</p>
       </section>   
